<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="30dp"
        android:text="@string/fuel_consumption"
        android:textColor="@color/heading1"
        android:textSize="30sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tvFuelInLiter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvHeading"
        android:layout_alignBaseline="@id/etFuelLiter"
        android:layout_marginStart="10dp"
        android:text="@string/tv_fuel_in_liter"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvDistanceInKm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/etDistance"
        android:layout_marginStart="10dp"
        android:text="@string/tv_distance_in_km"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etFuelLiter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvHeading"
        android:layout_alignParentEnd="true"
        android:ems="10"
        android:hint="@string/et_0_liter"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/etDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etFuelLiter"
        android:layout_alignParentEnd="true"
        android:ems="10"
        android:hint="@string/et_distance_hint"
        android:inputType="number" />

    <Button
        android:id="@+id/btCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etDistance"
        android:layout_marginTop="20dp"
        android:text="@string/btCalculate_text" />

    <TextView
        android:id="@+id/tvOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btCalculate"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/tvOutput_text_consumption"
        android:textSize="20sp" />

</RelativeLayout>